--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: WORKSHOP NAME GOES HERE
+title: Introduction to 3D Design With Fusion 360
 remote_theme: pmarsceill/just-the-docs
 
 # Footer "Edit this page on GitHub" link text
